# oxideav

./: .gitignore  Cargo.toml  README.md  play.sh  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/oxideav/: Cargo.toml  README.md
crates/oxideav-cli/: Cargo.toml  README.md
crates/oxideav-cli/src/: main.rs
crates/oxideav-h263/: Cargo.toml  README.md
crates/oxideav-h263/src/: decoder.rs
crates/oxideav-h263/tests/: encoder_roundtrip.rs  p_picture_roundtrip.rs
crates/oxideav-id3/: Cargo.toml  README.md
crates/oxideav-id3/src/: lib.rs
crates/oxideav-mod/: Cargo.toml  README.md
crates/oxideav-mod/src/: container.rs  decoder.rs  header.rs  lib.rs
crates/oxideav-s3m/: Cargo.toml  README.md
crates/oxideav-s3m/src/: container.rs  decoder.rs  header.rs  lib.rs  pattern.rs  player.rs  samples.rs
crates/oxideav-s3m/tests/: parse_header.rs
crates/oxideav-source/: Cargo.toml  README.md
crates/oxideav-source/src/: buffered.rs  file.rs  lib.rs  uri.rs
crates/oxideav-source/tests/: buffered.rs  file.rs
crates/oxideav-tests/: Cargo.toml
crates/oxideav-tests/src/: lib.rs
crates/oxideav-tests/tests/: audio_aac.rs  audio_flac.rs  audio_gsm.rs  audio_mp1.rs  audio_mp2.rs  audio_mp3.rs  audio_opus.rs  audio_speex.rs  audio_vorbis.rs  video_ffv1.rs  video_h263.rs  video_mjpeg.rs  video_mpeg1.rs  video_mpeg4.rs  video_theora.rs  video_vp8.rs
crates/oxideav-vp8/: Cargo.toml  README.md
crates/oxideav-vp8/src/: bool_encoder.rs  decoder.rs  encoder.rs  fdct.rs  lib.rs
crates/oxideav-vp8/tests/: encoder_roundtrip.rs
crates/oxideav/src/: lib.rs
crates/oxideplay/: Cargo.toml  README.md
crates/oxideplay/src/: decode_worker.rs  driver.rs  events.rs  job_sink.rs  main.rs  player.rs  tui.rs
crates/oxideplay/src/drivers/: audio_convert.rs  engine.rs  mod.rs  sdl2_audio.rs  sdl2_driver.rs  sdl2_loader.rs  sdl2_video.rs  sysaudio_ao.rs  winit_audio.rs  winit_driver.rs  winit_video.rs  winit_vo.rs  yuv_to_rgb.wgsl
scripts/: clone-siblings.sh  dev-patch.sh  extract-crate.sh
