[workspace]
resolver = "2"
members = [
    "crates/oxideav",
    "crates/oxideav-cli",
    "crates/oxideplay",
    "crates/oxideav-tests",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-workspace"
homepage = "https://github.com/OxideAV/oxideav-workspace"
authors = ["Mark Karpeles"]
readme = "README.md"

[workspace.dependencies]
# Every per-format codec, container, filter, source driver, and codec-trait
# crate now lives in its own OxideAV/* repository and is consumed from
# crates.io (or a local sibling via scripts/dev-patch.sh). Pins use "0.0"
# so patch-level bumps in the infra crates don't force a re-publish here.
oxideav-core = "0.0"
oxideav-codec = "0.0"
oxideav-container = "0.0"
oxideav-pipeline = "0.0"
oxideav-basic = "0.0"
oxideav-ogg = "0.0"
oxideav-vorbis = "0.0"
oxideav-opus = "0.0"
oxideav-ffv1 = "0.0"
oxideav-flac = "0.0"
oxideav-mkv = "0.0"
oxideav-mp4 = "0.0"
oxideav-avi = "0.0"
oxideav-mjpeg = "0.0"
oxideav-mpeg1video = "0.0"
oxideav-vp9 = "0.0"
oxideav-h265 = "0.0"
oxideav-h264 = "0.0"
oxideav-av1 = "0.0"
oxideav-h263 = "0.0"
oxideav-vp8 = "0.0"
oxideav-audio-filter = "0.0"
oxideav-pixfmt = "0.0"
oxideav-mpeg4video = "0.0"
oxideav-theora = "0.0"
oxideav-iff = "0.0"
oxideav-mod = "0.0"
oxideav-s3m = "0.0"
oxideav-mp1 = "0.0"
oxideav-mp2 = "0.0"
oxideav-mp3 = "0.0"
oxideav-id3 = "0.0"
oxideav-aac = "0.0"
oxideav-celt = "0.0"
oxideav-g7231 = "0.0"
oxideav-g728 = "0.0"
oxideav-g729 = "0.0"
oxideav-g711 = "0.0"
oxideav-g722 = "0.0"
oxideav-gsm = "0.0"
oxideav-speex = "0.0"
oxideav-webp = "0.0"
oxideav-gif = "0.0"
oxideav-png = "0.0"
oxideav-amv = "0.0"
oxideav-subtitle = "0.0"
oxideav-sub-image = "0.0"
oxideav-ass = "0.0"
oxideav-prores = "0.0"
oxideav-jpegxl = "0.0"
oxideav-jpeg2000 = "0.0"
oxideav-avif = "0.0"
oxideav-source = "0.0"
oxideav-http = "0.0"
oxideav-job = "0.0"

# The aggregator crate stays in this workspace (it's the "everything
# wired up" entry point for the CLI / player / integration tests).
oxideav = { path = "crates/oxideav", version = "0.0.3" }

thiserror = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
