[package]
name = "oxideav-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line frontend for oxideav"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "transcoding", "cli", "ffmpeg", "pure-rust"]
categories = ["multimedia", "command-line-utilities"]

[[bin]]
name = "oxideav"
path = "src/main.rs"

[features]
default = ["http"]
http = ["oxideav/http"]

[dependencies]
oxideav = { workspace = true }
oxideav-source = { workspace = true }
clap = { workspace = true }
