[package]
name = "oxideav-id3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust ID3v1 / ID3v2 (2.2 / 2.3 / 2.4) tag parser for oxideav"

[dependencies]
oxideav-core = { workspace = true }
