[package]
name = "oxideav-s3m"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Scream Tracker 3 Module (S3M) container + codec for oxideav"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "audio", "tracker", "s3m", "scream"]
categories = ["multimedia::audio"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
