[package]
name = "oxideav-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generic source registry: opens URIs (file://, future http://) into Read+Seek; prefetch buffer wrapper"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "io", "source", "streaming", "pure-rust"]
categories = ["multimedia"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-container = { workspace = true }
