[package]
name = "oxideav-vp8"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust VP8 video decoder for oxideav (RFC 6386, I-frame decode + IVF container)"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "video", "vp8", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
