[package]
name = "oxideav"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Central aggregator crate for oxideav — re-exports and a prebuilt registry"

[features]
default = ["basic", "ogg", "vorbis", "opus", "flac", "mkv", "mp4", "iff", "amiga_mod"]
basic = ["dep:oxideav-basic"]
ogg = ["dep:oxideav-ogg"]
vorbis = ["dep:oxideav-vorbis"]
opus = ["dep:oxideav-opus"]
flac = ["dep:oxideav-flac"]
mkv = ["dep:oxideav-mkv"]
mp4 = ["dep:oxideav-mp4"]
iff = ["dep:oxideav-iff"]
amiga_mod = ["dep:oxideav-mod"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-pipeline = { workspace = true }
oxideav-basic = { workspace = true, optional = true }
oxideav-ogg = { workspace = true, optional = true }
oxideav-vorbis = { workspace = true, optional = true }
oxideav-opus = { workspace = true, optional = true }
oxideav-flac = { workspace = true, optional = true }
oxideav-mkv = { workspace = true, optional = true }
oxideav-mp4 = { workspace = true, optional = true }
oxideav-iff = { workspace = true, optional = true }
oxideav-mod = { workspace = true, optional = true }
