[package]
name = "oxideplay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reference media player for the oxideav framework (SDL2 + crossterm)"

# oxideplay is the only binary in the workspace allowed non-pure deps. We
# load SDL2 *at runtime* through `libloading` rather than linking against
# rust-sdl2 / sdl2-sys at build time — this keeps SDL2 a soft dependency
# (the binary still builds and runs in headless mode without it). The
# library half of oxideav stays 100% pure Rust.
[features]
default = ["http"]
# Pulls oxideav-http through the aggregator. Disable to drop the
# ureq/rustls dependency tree from the player binary.
http = ["oxideav/http"]

[dependencies]
oxideav = { workspace = true }
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-source = { workspace = true }
clap = { workspace = true }
crossterm = "0.28"
libloading = "0.8"
