[package]
name = "oxideplay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reference media player for the oxideav framework (SDL2 + crossterm)"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "player", "audio", "video", "sdl2"]
categories = ["multimedia", "command-line-utilities"]
# oxideplay is the only binary in the workspace allowed non-pure deps,
# but even those we load *at runtime* through `libloading` — SDL2 via
# sdl2_loader.rs and every audio API via oxideav-sysaudio. No C library
# ends up in the binary's NEEDED list at build time.
[features]
default = ["http", "winit"]
# Pulls oxideav-http through the aggregator. Disable to drop the
# ureq/rustls dependency tree from the player binary.
http = ["oxideav/http"]
# Pure-Rust window + GPU + audio backend as an alternative to SDL2.
# Uses winit (windowing), wgpu (GPU YUV→RGB), and oxideav-sysaudio
# (runtime-loaded native audio APIs — ALSA, PulseAudio, WASAPI,
# CoreAudio).
winit = [
    "dep:winit",
    "dep:wgpu",
    "dep:oxideav-sysaudio",
    "dep:bytemuck",
    "dep:pollster",
    "dep:ringbuf",
]

[dependencies]
oxideav = { workspace = true }
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
oxideav-container = { workspace = true }
oxideav-source = { workspace = true }
clap = { workspace = true }
crossterm = "0.28"
libloading = "0.8"
winit = { version = "0.30", optional = true }
wgpu = { version = "23", optional = true }
oxideav-sysaudio = { workspace = true, optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }
pollster = { version = "0.3", optional = true }
ringbuf = { version = "0.4", optional = true }
